# damai

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  retry.py  state.json  state.py
.github/workflows/: monitor.yml
.superpowers/brainstorm/: .last-token
.superpowers/brainstorm/46918-1783410866/content/: architecture.html  data-flow.html  waiting-components.html  waiting-errors.html  waiting-testing.html
.superpowers/brainstorm/46918-1783410866/state/: server-info  server-instance-id
checkers/: __init__.py  base.py  http.py  playwright.py
docs/superpowers/plans/: 2026-07-07-damai-ticket-monitor.md
docs/superpowers/specs/: 2026-07-07-damai-ticket-monitor-design.md
notifiers/: email.py  wechat.py
tests/: test_checker.py  test_config.py  test_email.py  test_main.py  test_state.py  test_wechat.py
tests/fixtures/: detail_not_sale.html  detail_on_sale.html  search_result.html
