[project]
name = "damai-ticket-monitor"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "pytz>=2023.3",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
dev = ["pytest>=7.4.0", "pytest-mock>=3.12.0", "responses>=0.24.0"]
